started waiter availability

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,12 +1,14 @@
 <div class="container"> 
 
+    <h1> WAITERS AVAILABLE </h1>
+
 
 <form action="/days">
-  <input type="day" name="vehicle" value="Mon"> Monday<br>
-  <input type="day" name="vehicle" value="Tues"> Tuesday<br>
-  <input type="day" name="vehicle" value="Wed"> Wed<br>
-  <input type="day" name="vehicle" value="Thu"> Thursday<br>
-  <input type="day" name="vehicle" value="Fri"> Friday<br>
+  <input type="checkbox" name="day" value="Mon"> Monday<br>
+  <input type="checkbox" name="day" value="Tues"> Tuesday<br>
+  <input type="checkbox" name="day" value="Wed"> Wed<br>
+  <input type="checkbox" name="day" value="Thu"> Thursday<br>
+  <input type="checkbox" name="day" value="Fri"> Friday<br>
   <input type="submit" value="Submit">
 </form>
 
