--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,7 +5,7 @@
   <form action="/waiters/:username" method="POST">
     <input type="text" name="waiter">
 
-    <button class="button-primary GreetBtn" type="submit" name="button">Greet</button>
+    <button class="button-primary GreetBtn" type="submit" name="button">Enter</button>
 
   </form>
 
