--- a/public/css/waiter.css
+++ b/public/css/waiter.css
@@ -2,6 +2,13 @@ body{
     text-align: center;
 }
 
-.container{
+
+.days{
+    display: inline;
+}
+
+h1{
     text-align: center ;
+    background-color: aquamarine;
+    
 }
