--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,20 +1,23 @@
+<h1> WAITERS AVAILABLE </h1>
+
 <div class="container"> 
 
-    <h1> WAITERS AVAILABLE </h1>
-
-  <form action="/waiters/:username" method="POST">
-    <input type="text" name="waiter">
-
-    <button class="button-primary GreetBtn" type="submit" name="button">Enter</button>
+  <form action="/waiters/{{waiter}}" method="POST">
 
   </form>
 
 <form action="/days">
+<div  class="days">
+
   <input type="checkbox" name="day" value="Mon"> Monday<br>
   <input type="checkbox" name="day" value="Tues"> Tuesday<br>
   <input type="checkbox" name="day" value="Wed"> Wed<br>
   <input type="checkbox" name="day" value="Thu"> Thursday<br>
   <input type="checkbox" name="day" value="Fri"> Friday<br>
+  
+  <button class="button-primary GreetBtn" type="submit" name="button">Enter</button>
+
+</div>
   
 </form>
 
