--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -6,21 +6,18 @@
 
   </form>
 
+<div  class="days"></div>
 <form action="/days">
-<div  class="days">
-
   <input type="checkbox" name="day" value="Mon"> Monday<br>
   <input type="checkbox" name="day" value="Tues"> Tuesday<br>
   <input type="checkbox" name="day" value="Wed"> Wed<br>
   <input type="checkbox" name="day" value="Thu"> Thursday<br>
   <input type="checkbox" name="day" value="Fri"> Friday<br>
-  
+  <input type="checkbox" name="day" value="Sat"> Saturday<br>
+  <input type="checkbox" name="day" value="Sun"> Sunday<br>
   <button class="button-primary GreetBtn" type="submit" name="button">Enter</button>
-
-</div>
-  
 </form>
-
+</div>
 
 
 
