--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,10 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/skeleton.css">
-
+    <link rel="stylesheet" href="/css/skeleton.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/waiter.css">
     <title>Waiter Availabity</title>
   </head>
   <body>
