--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -5,9 +5,9 @@
 
 
      <table>
-            {{#each days}}
+            {{#each getDay}}
         
-            <th> {{ this }} </th> 
+            <th> {{ this.day }} </th> 
         
         {{/each}}
 </table>
