--- a/views/admin.handlebars
+++ b/views/admin.handlebars
@@ -1,18 +1,22 @@
 <h1>Admin</h1>
 
-<form action="/days" method="get">
-      <button class="button-primary" type="submit" name="button">Home</button> </form>
-
-
-     <table>
-            {{#each admin}}
-            <th> {{ this.day }} </th> 
-                    {{!-- {{{this.waiter}}} --}}
+    <table>
+    <tr>
+        {{#each admin}}
+        <th>
+            {{day}}
+        </th>
         {{/each}}
+    </tr>
+    <tr>
+        {{#each admin}}
+        <td>
+            <ul>
+                {{#each waiter}}
+               <li> {{this}} </li> 
+                {{/each}}
+            </ul>
+        </td>
+        {{/each}}
+    </tr>
 </table>
-        
-    </table>
-    <form action="/resetDB" method="POST">
-      <button class="button-primary" type="submit" name="button">Reset</button> </form>
-
-</div>
